plugins {
    id "java"
}

sourceCompatibility = 14
targetCompatibility = 8

tasks.withType(JavaCompile).all {
    options.compilerArgs = [
            "--release", "8",
            '--enable-preview',
    ]

    doFirst {
        options.compilerArgs = options.compilerArgs.findAll {
            it != '--enable-preview'
        }
    }
}

test {
    doFirst {
        def java8home = System.getenv("JAVA_HOME_8")
        if (!java8home) {
            throw new IllegalStateException("JAVA_HOME_8 must be set")
        }
        executable = "$java8home/bin/java"
    }
}

dependencies {
    annotationProcessor project(":jabel-javac-plugin")
    compileOnly project(":jabel-javac-plugin")

    testCompile 'junit:junit:4.12'
}